# clang-plugin-test

./: CMakeLists.txt  LICENSE  clang-plugin-test.cpp  testinput.cpp
